fix(snap): empty-range requeue, root-mismatch restart, trie batching, BUG-BC1; test suite expansion (J/K/L series) (#1157)
* sync: fall back to GetNodeData after 5 consecutive empty SNAP responses

When SNAP GetTrieNodes returns empty for the same node 5 times in a row,
switch to GetNodeData (legacy ETH63-67 protocol) for subsequent retries.

GetNodeData fetches by hash directly from the peer's raw KV store, without
needing a specific state root context. A peer may hold node bytes in RocksDB
even after pruning the historical state root that SNAP GetTrieNodes requires.
This breaks the infinite SNAP retry loop that occurs when all SNAP peers have
pruned the relevant historical state.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* fix(tests): update test call sites for cherry-pick signature changes

- BlockchainHostActorSpec: drop pendingTransactionsManager arg (now Option[ActorRef] = None)
- PeerManagerSpec: add BlockedIPRegistry, staticNodes, externalSchedulerOpt args
- SNAPServerHandlerSpec: remove flatAccountStorage/flatSlotStorage params (not in
  april-showers NetworkPeerManagerActor constructor)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* fix(regular-sync): use SNAP GetByteCodes for missing contract code recovery

When BlockImporter detects a gas mismatch (EVM executed contract as EOA due to
missing bytecode), the recovery path previously used GetNodeData (deprecated in
eth/68). Modern ETC peers don't serve GetNodeData, so 4 retries always failed,
and BlockImporter looped forever retrying block import.

Fix: add isContractCode flag to FetchStateNode. When set, StateNodeFetcher uses
SNAP GetByteCodes([codeHash]) instead of GetNodeData. All SNAP-capable peers
serve GetByteCodes. Falls back to GetNodeData if GetByteCodes returns empty.

Unblocks Attempt 30 at block 24444923 (contract 0x888157b2, codeHash 24043e57).
Besu reference: SnapSynchronizer.java requestBytecodesByHash path.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropi